--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,13 @@ email: markzajac@hotmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Mark Zajac created this web site as a means of sharing files
   with other people.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+#baseurl: "" # the subpath of your site, e.g. /blog
+#url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  mark-zajac
+
+domain: my-site.github.io       # 
+url: https://my-site.github.io  # 
+baseurl: /shared-files/         # 
 
 exclude:
    - .sass-cache/
